--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,19 +29,17 @@ jobs:
           paths:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
-      # run tests!
       - run:
-          name: run Static Analysivs
+          name: Run Static Analysivs
           command: |
             . venv/bin/activate
-            flake8 tes_fizzbuzz.py
+            flake8 test_fizzbuzz.py
         - run:
            name: run tests
            command: |
              . venv/bin/activate
-               python tes_fizzbuzz.py
+             python tes_fizzbuzz.py
 
       - store_artifacts:
           path: test-reports
           destination: test-reports
-          
