--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            python tes_fizzbuzz.py
+            python test_fizzbuzz.py
       - store_artifacts:
           path: test-reports
           destination: test-reports
