--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,41 +1,68 @@
-# Python CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-python/ for more details
-#
+defaults: &defaults
+  working_directory: ~/Circleci_Python_workshop
+  docker:
+    - image: circleci/python:3.6.1
+
 version: 2
 jobs:
-  build:
-    docker:
-      # specify the version you desire here
-      # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
-      - image: circleci/python:3.6.1
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-    working_directory: ~/Circleci_Python_workshop
+  checkout_code:
+    <<: *defaults
     steps:
       - checkout
-      - restore_cache:
-          keys:
+      - persist_to_workspace:
+        root:
+        parths:
+python_dependncies:
+  <<: *defaults
+  steps:
+    - attach_workspace:
+        at: . 
+    - restore_cache:
+        keys:
           - v1-dependencies-{{ checksum "requirements.txt" }}
-      - run:
-          name: install dependencies
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
-      - save_cache:
-          paths:
+    - run:
+        name: install dependencies
+        command: |
+          python3 -m venv venv
+          . venv/bin/activate
+          pip install -r requirements.txt
+    - save_cache:
+        paths:
             - ./venv
-          key: v1-dependencies-{{ checksum "requirements.txt" }}
-      - run:
-          name: Run Static Analysivs
-          command: |
-            . venv/bin/activate
-            flake8 test_fizzbuzz.py
-      - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            python test_fizzbuzz.py
+        key: v1-dependencies-{{ checksum "requirements.txt" }}
+      
+Static Analysis:
+  <<: *defaults
+  steps:
+    - attach_workspace:
+        at: .   
+    - run:
+        name: Run Static Analysivs
+        command: |
+          . venv/bin/activate
+          flake8 test_fizzbuzz.py
+unit_tests:
+  <<: *defaults
+  steps:
+    - attach_workspace:
+        at: .   
+    - run:
+        name: run tests
+        command: |
+          . venv/bin/activate
+          python test_fizzbuzz.py          
+workflows:
+  version: 2
+  Circleci_Python_workshop:
+    jobs:
+      - checkout_code
+      - python_dependncies:
+          requires:
+            - checkout_code
+      - static_analysis:
+          requires:
+            - python_dependncies
+      - unit_tests:
+          requires:
+            - python_dependncies
+  
