--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,7 @@ python_dependncies:
     - attach_workspace:
         at: . 
     - restore_cache:
-        keys:
-          - v1-dependencies-{{ checksum "requirements.txt" }}
+        keys: v1-dependencies-{{ checksum "requirements.txt" }}
     - run:
         name: install dependencies
         command: |
