--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,8 @@ jobs:
     steps:
       - checkout
       - persist_to_workspace:
-        root:
-        parths:
+          root: .
+          paths: .
 python_dependncies:
   <<: *defaults
   steps:
