--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths: .
-python_dependncies:
+python_dependencies:
   <<: *defaults
   steps:
     - attach_workspace:
