--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,44 +12,47 @@ jobs:
       - persist_to_workspace:
           root: .
           paths: .
-python_dependencies:
-  <<: *defaults
-  steps:
-    - attach_workspace:
-        at: . 
-    - restore_cache:
-        keys: v1-dependencies-{{ checksum "requirements.txt" }}
-    - run:
-        name: install dependencies
-        command: |
-          python3 -m venv venv
-          . venv/bin/activate
-          pip install -r requirements.txt
-    - save_cache:
-        paths:
+
+  python_dependencies:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: . 
+      - restore_cache:
+          keys: v1-dependencies-{{ checksum "requirements.txt" }}
+      - run:
+          name: install dependencies
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+      - save_cache:
+          paths:
             - ./venv
-        key: v1-dependencies-{{ checksum "requirements.txt" }}
+          key: v1-dependencies-{{ checksum "requirements.txt" }}
       
-Static Analysis:
-  <<: *defaults
-  steps:
-    - attach_workspace:
-        at: .   
-    - run:
-        name: Run Static Analysivs
-        command: |
-          . venv/bin/activate
-          flake8 test_fizzbuzz.py
-unit_tests:
-  <<: *defaults
-  steps:
-    - attach_workspace:
-        at: .   
-    - run:
-        name: run tests
-        command: |
-          . venv/bin/activate
-          python test_fizzbuzz.py          
+  static_snalysis:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: .   
+      - run:
+          name: Run Static Analysivs
+          command: |
+            . venv/bin/activate
+            flake8 test_fizzbuzz.py
+
+  unit_tests:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: .   
+      - run:
+          name: run tests
+          command: |
+            . venv/bin/activate
+            python test_fizzbuzz.py    
+
 workflows:
   version: 2
   Circleci_Python_workshop:
