--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,10 @@ jobs:
     <<: *defaults
     steps:
       - attach_workspace:
-          at: .   
+          at: .  
+      - restore_cache:
+          keys: 
+            - v1-dependencies-{{ checksum "requirements.txt" }} 
       - run:
           name: Run Static Analysivs
           command: |
@@ -47,6 +50,9 @@ jobs:
     steps:
       - attach_workspace:
           at: .   
+      - restore_cache:
+          keys: 
+            - v1-dependencies-{{ checksum "requirements.txt" }}
       - run:
           name: run tests
           command: |
