--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
       
-  static_snalysis:
+  static_analysis:
     <<: *defaults
     steps:
       - attach_workspace:
