--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,8 @@ jobs:
       - attach_workspace:
           at: . 
       - restore_cache:
-          keys: v1-dependencies-{{ checksum "requirements.txt" }}
+          keys: 
+            - v1-dependencies-{{ checksum "requirements.txt" }}
       - run:
           name: install dependencies
           command: |
